Fix "Create new sound" button overlapping with "Open" button

--- a/app/css/index.scss
+++ b/app/css/index.scss
@@ -583,6 +583,7 @@ h1 a {
   align-items: center;
   -webkit-justify-content: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .button-createnew input {
